Image area modifications

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 emergency
             </span>
             <p class="title">Siddharth <br/> Verma</p>
-            <img src="./assets/main.png" class="mainImg" />
+            <img src="./assets/mainImg.png" class="mainImg" />
         </div>
         <div class="mainInfo">
             <h2 class="title">Machine Learning Enthusiast & <br/> React Native Developer</h2>
