--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <ul>
             <li class="active"><a href="#about">About</a></li>
-            <li><a href="/">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="/">Socials</a></li>
         </ul>
     </nav>
@@ -132,6 +132,19 @@
             </div>
         </div>
         <img src="./assets/Logo.png" class="aboutLogo"/>
+    </section>
+
+    <section class="projects" id="projects">
+        <h1>Projects</h1>
+        <div class="container">
+            <h2>BizInsights</h2>
+            <div class="main">
+                <p>A GenAI React Native Application using LLAMA3</p>
+                <video width="100%" height="auto" autoplay>
+                    <source src="/assets/bizinsightsApp.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
     </section>
 </body>
 </html>
